--- a/waybar/style.css
+++ b/waybar/style.css
@@ -27,7 +27,7 @@ window#waybar {
 
 #workspaces button {
     padding: 0 5px;
-    background-color: rgba(35, 39, 41, 0.5);
+    background-color: transparent;
     color: rgb(195, 196, 195);
     box-shadow: inset 0 -3px rgb(99, 105, 107);
     border: none;
