waybar battery module

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -17,12 +17,12 @@ window#waybar {
 
 .modules-right {
     margin: 3px;
-    background-color: rgba(35, 39, 41, 0.5);
+    background-color: rgba(35, 39, 41, 0.75);
     box-shadow: inset 0 -3px rgb(99, 105, 107);
 }
 
 #workspaces {
-    background-color: rgba(35, 39, 41, 0.5);
+    background-color: rgba(35, 39, 41, 0.75);
 }
 
 #workspaces button {
@@ -71,13 +71,7 @@ window#waybar {
 }
 
 #battery {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+    padding: 0 5px;
 }
 
 @keyframes blink {
@@ -88,13 +82,7 @@ window#waybar {
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    background-color:  rgba(229, 57, 53, 0.75);
 }
 
 label:focus {
