--- a/waybar/style.css
+++ b/waybar/style.css
@@ -49,8 +49,9 @@ window#waybar {
 }
 
 #mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    background-color: rgba(104, 72, 219, 0.75);
+    box-shadow: inset 0 -3px rgb(155, 128, 206);
+    padding: 0 5px;
 }
 
 #window,
